# terrain_renderer

./: Cargo.toml  README.md
src/: main.rs
src/controllers/: camera_controller.rs
src/core/: app.rs  input_manager.rs  mod.rs  time_manager.rs
src/render/: bind_group.rs  mesh.rs  mesh_renderer.rs  mod.rs  render_manager.rs  renderer.rs  scene.rs  skybox_renderer.rs  vertex.rs  water_renderer.rs
src/shaders/: mesh.wgsl  skybox.wgsl  water.glsl
src/utils/: mesh.rs  mesh_generator.rs  mod.rs  terrain_generator.rs
