[package]
name = "terrain_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.1", features = ["derive"] }
futures = "0.3.30"
glam = { version = "0.25.0", features = ["mint", "bytemuck"] }
mint = "0.5.9"
noise = "0.8.2"
once_cell = "1.19.0"
pollster = "0.3.0"
wgpu = { version = "0.19.1", features = ["glsl"] }
winit = { version = "0.29.10", features = ["mint"] }
